--- a/css/contact.css
+++ b/css/contact.css
@@ -91,7 +91,8 @@
 
 .contactItem h4{
 
-    color: green;
+    /* color: green; */
+    color: black;
     /* line-height: 0; */
 }
 
