--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@ img{
     bottom: 300px;
     right: 200px;
     text-align: right;
-    width: 800px;
+    width: 850px;
     height: 450px;
 }
 
@@ -68,7 +68,7 @@ img{
 
 .learnButton:hover{
     background-color: white;
-    color: rgb(0, 128, 0);
+    color: black;
 }
 
 /**** Hero Section END ****/
@@ -90,7 +90,8 @@ img{
 
 .disneyQuote p{
     font-size: 26px;
-    color: green;
+    /* color: green; */
+    color: black;
     font-weight: bold;
 }
 
@@ -113,7 +114,6 @@ img{
 
 .welcomeImage{
     text-align: center;
-    
 }
 
 .welcomeImage img{
@@ -127,7 +127,8 @@ img{
 
 .welcomeText h2{
     font-size: 40px;
-    color: green;
+    /* color: green; */
+    color: black;
 
 }
 
@@ -241,7 +242,8 @@ img{
 
 .testimonialButton:hover{
     background-color: white;
-    color: rgb(0, 128, 0);
+    /* color: green; */
+    color: black;
 }
 
 
@@ -263,7 +265,8 @@ img{
 .practiceAreas h3{
     font-size: 60px;
     font-weight: bold;
-    color: green;
+    /* color: green; */
+    color: black;
     line-height: 0;
 }
 
@@ -473,7 +476,7 @@ img{
         justify-content: center;
         align-items: center;
 
-        background-color:rgb(233, 233, 233);
+        background-color:rgb(233, 233, 233); 
 
     }
 
